--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MSI\\SQLEXPRESS;Database=Overwatch;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
+  }
